--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body{
-  display: grid;
-  grid-template-columns: repeat(1,1fr);
-}
+@tailwind variants;
